--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+body{margin:0;}
 main {
   padding: 3em;
   margin-top: 30px;
@@ -13,7 +14,3 @@ main {
   margin: 3em;
 }
 
-.history {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-}
