--- a/frontend/src/components/test/Test.css
+++ b/frontend/src/components/test/Test.css
@@ -20,7 +20,7 @@
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 0.5rem;
-    overflow:scroll;
+    /* overflow:scroll; */
 }
 
 .quote-display{
