--- a/frontend/src/components/test/Test.css
+++ b/frontend/src/components/test/Test.css
@@ -3,7 +3,7 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
     padding: 2em 1em 2.5em;
     border-radius: 0.5rem;
-    background-color: #f2e273;
+    background-color: #f3efc3;
     margin-top: 2em;
 }
 
@@ -43,12 +43,17 @@
 }
 
 .correct {
-    color: green;
+    color: #026b1b;
 }
 
 .incorrect {
-    color: red;
+    color: #b30206;
     text-decoration: underline;
+}
+
+.active-letter{
+    background:black;
+    color:#f3efc3;
 }
 
 .test-container{
