--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,12 @@
 body{margin:0;}
 main {
-  padding: 3em;
-  margin-top: 30px;
+  padding: 3em 2em;
+  margin: 1vh 0;
+  display: grid;
+  grid-template-columns: 1.5fr 3.5fr;
+  height:80vh;
+  font-size: 1.1em;
 }
-
 
 .test{
   display: block;
