--- a/frontend/src/components/test/Test.css
+++ b/frontend/src/components/test/Test.css
@@ -1,40 +1,50 @@
 .card{
-    /* box-shadow: rgba(50, 50, 93, 0.2) 0px 50px 100px -20px, rgba(0, 0, 0, 0.20) 0px 30px 60px -30px, rgba(96, 96, 96, 0.25) 0px -2px 6px 0px inset; */
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
     padding: 2em 1em 2.5em;
-    border-radius: 0.5rem;
     background-color: #f3efc3;
-    margin-top: 2em;
+    height:100vh;
+    position:relative;
+    /* z-index: -1; */
+    padding:2rem;
+    /* display: flex;
+    flex-direction:column;
+    justify-content:center;     */
 }
 
 .user-input{
-    display:block;
+    /* display:block; */
     background-color: white;
     border: 2px solid #a1922e;
     outline: none;
-    width: 90%;
-    height: 40vh;
-    margin: 1em auto 0;
+    /* width: 80%; */
+    width:90%;
+    height: 50vh;
+    margin: 2em 1em;
     resize: none;
     padding: 0.5rem 1rem;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border-radius: 0.5rem;
-    /* overflow:scroll; */
+    position: absolute;
+    bottom: 0;
 }
 
-.quote-display{
-    display:block;
+.container-a{
+    display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+    height:40vh;
+}
+
+.user-input-display{
     outline: none;
-    width: 90%;
-    margin: 0 auto 1em;
     padding: 0 1rem;
+    white-space: pre-wrap;
+    margin: 0.5em 1em;
     font-size: 16px;
-    border-radius: 0.5rem;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-.quote-display:hover{
+.user-input-display:hover{
     cursor:default;
 }
 
@@ -57,15 +67,16 @@
 }
 
 .test-container{
-    margin-top:2em;
+    /* margin-top:2em; */
 }
 
 #test-area{
     display: flex;
-	min-height: 62vh;
+	/* height: 10vh; */
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
     opacity: .6;
     font-size: 3em;
 }
+
