--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,9 +1,9 @@
 nav{
     overflow: hidden;
-    background-color: #333;
-    top: 0;
-    width: 100%;
-    text-align: right;
+    color: #333;
+    /* top: 0; */
+    /* width: 100%; */
+    text-align: left;
 }
 
 nav ul {
@@ -15,7 +15,8 @@ nav li {
 }
   
 nav .navlink {
-    color: #f2f2f2;
+    /* color: #f2f2f2; */
+    color: #333;
     text-align: center;
     padding: 14px 16px;
     font-size: 1.25em;
