--- a/frontend/src/components/tools/Tool.css
+++ b/frontend/src/components/tools/Tool.css
@@ -11,8 +11,8 @@ h2{
 }
 
 .tools{
-    height:88vh;
-    margin-right: 2.5em;
+    /* height:88vh; */
+    padding: 0 2em;
 }
 
 .tools h2{
@@ -21,7 +21,7 @@ h2{
 }
 
 .timer {
-    margin: .5em auto;
+    margin: 0.5em auto;
     padding: 0;
     display: flex;
     flex-direction: row;
@@ -186,4 +186,62 @@ h2{
 
 .dd-list .dd-active{
     background-color: #f3efc3;
+}
+
+/* HELP */
+* { box-sizing:border-box; }
+
+.keyboard {
+  margin:30px 0;
+  width:100%;
+  height:200px;
+  background:#bbb;
+  padding:17px 20px;
+  border-radius:10px;
+  border-bottom:6px solid #999;
+}
+
+.key-row {
+  display:-webkit-flex;
+  margin:0 auto 7px;
+  line-height:22px;
+}
+
+.key, .arrowkey-container {
+    margin:0 6px 0 0; 
+    text-align:center;
+}
+
+.key { 
+  background:#444;
+  color:#eee;
+  border-radius:4px;
+  box-shadow:0 1px 0 #222, inset 0 1px 3px rgba(255,255,255,0.1);
+  transition:0.1s;
+  align-items:center;
+  align-content:center;
+  height:27px;
+  border:2px solid rgba(0,0,0,0.08);
+}
+
+.one { flex:1; }
+.one-one-half { flex:1.5; }
+.two { flex:2; }
+.two-two-half { flex:2.5; }
+.three { flex:3; }
+.five { flex:5; }
+
+.key-row .key:last-child { margin:0; }
+
+.l { text-align:left; padding-left:2px; }
+.r { text-align:right; padding-right:2px; }
+
+.home-row{
+    background:black;
+}
+
+.active-key{
+    background-color: #f3efc3;
+    border: 2px solid #a1922e;
+    color:black;   
 }
