--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -1,8 +1,6 @@
 nav{
     overflow: hidden;
     color: #333;
-    /* top: 0; */
-    /* width: 100%; */
     text-align: left;
 }
 
@@ -12,10 +10,10 @@ nav ul {
   
 nav li {
     display:inline;
+    line-height:1.5em;
 }
   
 nav .navlink {
-    /* color: #f2f2f2; */
     color: #333;
     text-align: center;
     padding: 14px 16px;
@@ -23,7 +21,11 @@ nav .navlink {
     text-decoration: none;
 }
   
-nav .navlink:hover {
-    background: #ddd;
-    color: black;
+nav .navlink:hover, .nav-icon:hover {
+    color: #a1922e;
+    cursor: pointer;
+}
+
+.nav-icon{
+    font-size:1.25em;
 }
