--- a/frontend/src/components/navbar/Navbar.css
+++ b/frontend/src/components/navbar/Navbar.css
@@ -14,7 +14,7 @@ nav li {
 }
   
 nav .navlink {
-    color: #333;
+    color:#766a23;
     text-align: center;
     padding: 14px 16px;
     font-size: 1.25em;
@@ -23,6 +23,7 @@ nav .navlink {
   
 nav .navlink:hover, .nav-icon:hover {
     color: #a1922e;
+    /* color: #a1922e; */
     cursor: pointer;
 }
 
