--- a/frontend/src/components/history/history.css
+++ b/frontend/src/components/history/history.css
@@ -1,22 +1,25 @@
-.history {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+.history{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
+    padding: 2em 1em 2.5em;
+    background-color: #f3efc3;
+    position:relative;
+    padding:2rem;
 }
 
-.history-card{
-    padding:2em;
-    margin:2em;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
+.history h2{
+    color:#766a23;
+    font-size: 2em;
 }
 
 .table {
     border-collapse: collapse;
     margin: 25px 0;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
+    width:100%;
 }
 
 .table thead tr {
-    background-color: #036054;
+    background-color: #766a23;
     color: #ffffff;
     text-align: left;
 }
@@ -31,4 +34,32 @@
 
 .table tbody tr:nth-of-type(even) {
     background-color: #f3f3f3;
+}
+
+.table tbody tr:nth-of-type(odd) {
+    background-color: #fff;
+}
+
+.line{
+    color:#766a23;
+}
+
+svg{
+    overflow: visible;
+    display: block;
+    width: 100%;
+    margin-bottom: 2em;
+}
+
+.svg-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: center;
+    padding: 0 50px;
+    margin: 2em 0;
+}
+
+path{
+    width:100%
 }
