--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,7 @@ body{
   margin:0;
   font-family: Verdana;
 }
+
 main {
   padding: 0;
   margin: 0;
@@ -10,14 +11,26 @@ main {
   height:100vh;
 }
 
-.test{
-  display: block;
-  margin: 3em;
+h2{
+  /* color:#766a23; */
+  font-size: 2em;
+  text-align:center;
 }
 
-.container {
-  background-color: #f0db4f;
-  padding: 1.5rem;
-  border-radius: 0.5rem;
+h3{
+  text-align:center;
+  font-size: 1.3em;
+}
+
+.right{
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
+  padding: 2em 1em 2.5em;
+  position:relative;
+  padding:2rem;
+  min-height:100vh;
+}
+
+.dark-text{
+  color:#000;
 }
 
