--- a/frontend/src/components/test/Test.css
+++ b/frontend/src/components/test/Test.css
@@ -1,11 +1,3 @@
-.card{
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(96, 96, 96, 0.35) 0px -2px 6px 0px inset;
-    padding: 2em 1em 2.5em;
-    background-color: #f3efc3;
-    height:100vh;
-    position:relative;
-    padding:2rem;
-}
 
 .test-area{
     font-size: 1.3em;
@@ -13,12 +5,9 @@
     margin: 6em auto;
     width:80%;
 }
-.test-area h2{
-    color:#766a23;
-    font-size: 2em;
-}
+
 .test-area ul{
-    border: 2px solid #a1922e;
+    /* border: 2px solid #a1922e; */
     padding: 1em 3em;
 }
 .test-area li{
@@ -73,7 +62,7 @@
     text-decoration: underline;
 }
 
-.active-letter{
+/* .active-letter{
     background:black;
     color:#f3efc3;
-}
+} */
